# calculator

./: README.md
build-src-Desktop_Qt_6_5_0_GCC_64bit-Debug/: CMakeCache.txt  Calculator  Makefile  cmake_install.cmake  qtcsettings.cmake
build-src-Desktop_Qt_6_5_0_GCC_64bit-Debug/.cmake/api/v1/reply/: cache-v2-f69d44824f5a887f257e.json  cmakeFiles-v1-013e2af3600753b9a3e5.json  codemodel-v2-1d067545b39f82fce324.json  index-2023-04-23T22-01-49-0631.json  target-Calculator-Debug-83d9f361a407cbafe75e.json  target-Calculator_autogen-Debug-54d0ee9a78923d7c906d.json
build-src-Desktop_Qt_6_5_0_GCC_64bit-Debug/.qt/: QtDeploySupport.cmake
build-src-Desktop_Qt_6_5_0_GCC_64bit-Debug/Calculator_autogen/: moc_predefs.h  mocs_compilation.cpp
build-src-Desktop_Qt_6_5_0_GCC_64bit-Debug/Calculator_autogen/EWIEGA46WW/: moc_calculator.cpp  moc_credit.cpp  moc_graph.cpp
build-src-Desktop_Qt_6_5_0_GCC_64bit-Debug/Calculator_autogen/include/: ui_calculator.h  ui_credit.h  ui_graph.h
src/: CMakeLists.txt  Calculator.pro  Makefile  calc.c  calc.h  calculator.cpp  calculator.h  calculator.ui  credit.cpp  credit.h  credit_calc.c  credit_calc.h  custom_axis.cpp  custom_axis.h  docs.html  graph.cpp  pars.c  pars.h  set_custom_axis.cpp  set_custom_axis.h  set_custom_axis.ui  stack.c  stack.h
src/Calculator/: Calculator.pro  calc.c  calc.h  calculator.h  credit.cpp  credit.h  credit.ui  credit_calc.c  credit_calc.h  deposit_calc.c  graph.cpp  graph.h  graph.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  pars.c  stack.h  test.h
src/calculation/: calc.h
src/calculations/: calc.c  credit_calc.c  pars.c  stack.c
src/headers/: calc.h  calculator.h  credit.h  credit_calc.h  custom_axis.h  graph.h  pars.h  stack.h
src/qt/: calculator.cpp  credit.cpp  custom_axis.cpp  graph.cpp  graph.ui  main.cpp
src/test/: test.c
